# file_organizer

./: .env.example  .gitignore  README.md  app.py  config.toml.example  pyproject.toml
file_organizer/: file.py  main.py  prompt.py  toml_types.py
file_organizer_ui/: .prettierignore  .prettierrc.json  next.config.js  package-lock.json  package.json
file_organizer_ui/src/app/: globals.css  layout.tsx  page.tsx  types.ts
file_organizer_ui/src/app/components/: DestinationList.tsx  FileTable.tsx  Main.tsx
